<resources>
    <string name="app_name">Dr. D 1.0</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember me</string>
    <string name="newUser">New User?</string>
    <string name="register">Register</string>
    <string name="logo">Dr. D Logo</string>

    <!-- Strings related to Registration -->
    <string name="registerMessage">Welcome, This Registration is for Patient only , if you are Doctor or Hospital please visit our website.</string>
    <string name="username">Username</string>
    <string name="fristname">Frist Name *</string>
    <string name="middlename">Middle Name</string>
    <string name="lastname">Last Name *</string>
    <string name="personalInfo">Personal Information</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="termsPrivacy"><![CDATA[Terms & Privacy]]></string>
    <string name="error_noInternet">Error: Check the Internet Connectivity</string>
    <string name="registerByEmail">Register By Email</string>
    <string name="loginToAccount"><u>or Login to your account</u></string>
    <string name="passwordNotMatch">Password are not matched</string>
    <string name="reqiredFiled">please fill all the required fields</string>
    <string name="error_usernameExist">The Username is already exist, Please Try another one</string>
    <string name="phone">Phone *</string>
    <string name="id">ID</string>
    <string name="idTypes">ID Type</string>
    <string name="onlyPD">Sorry This app for the Doctors and Patients, you can Login from our website</string>
    <string name="dob">Date of Birth *</string>
    <string name="addressInfo">Address Information</string>
    <string name="neighborhood">Neighborhood</string>
    <string name="street">Street Name</string>
    <string name="building">Building Number</string>
    <string name="postal">Postal Code</string>
    <string name="addition">Addition Code</string>
    <string name="weight">Weight *</string>
    <string name="height">Height *</string>
    <string name="patientInfo">Patient Information</string>
    <string name="sex">Sex*</string>
    <string name="typeOfBlood">Type Of Blood*</string>
    <string name="typeOfD">Type Of Diabetes*</string>
    <string name="countries">Country</string>
    <string name="cities">City</string>
    <string name="save">Save</string>
    <string name="selectUrCoun">Select your Country *</string>
    <string name="selectUridType">Select Your ID Type</string>
    <string name="selectUrCit"> Select Your City *</string>
    <string name="error_requiredField">Please complete the requireds field</string>
    <string name="dataSavedSuccessfully">Data saved successfully</string>
    <string name="error_notSaved">Data not saved, Please Try again</string>
    <string name="fillAllRequired"> <b>* Please Fill all the required fields</b></string>
    <string name="myDoctor">My Doctor</string>
    <string name="history">History</string>
    <string name="report">New Report</string>
    <string name="profile">My Profile</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="feedback">Feedback</string>
    <string name="newReport">New Report</string>
    <string name="BloodPressure">Blood Pressure</string>
    <string name="BloodGlucose">Blood Glucose</string>
    <string name="HeartRate">Heart Rate</string>
    <string name="submit">Submit</string>
    <string name="error_getValue">Error getting the Value</string>
    <string name="error_noDoctorSelected">No doctor selected, You can select the Doctor from \"MyDoctor\"</string>
    <string name="myPatiens">My Patients</string>
    <string name="myProfile">My Profile</string>
    <string name="logout_successfully">Logout Successfully</string>
    <string name="NoData">No Data to show</string>
    <string name="dailyreport">Daily Report</string>
    <string name="monthlyaverage">Monthly Average</string>
    <string name="dateTime">Date / Time</string>
    <string name="enterDoctorCode">Enter Doctor Code</string>
    <string name="doctorName">Doctor Name</string>
    <string name="hospitalName">Hospital Name</string>
    <string name="doctorDegree">Doctor Degree</string>
    <string name="doctorRank">Doctor Rank</string>
    <string name="select">Select</string>
    <string name="change">Change</string>
    <string name="error_doctorNotFound">Doctor Not Found</string>
    <string name="error_patientIDNotFound">Error: Patient ID Not Found</string>
    <string name="update">Update</string>
    <string name="doctorInfo">Doctor Information</string>
    <string name="patientName">Patient Name</string>
    <string name="patientSex">Patient Sex</string>
    <string name="patientAge">Patient Age</string>
    <string name="patientID">Patient ID</string>
    <string name="diabetesType">Diabetes Type</string>
    <string name="errorDoctorIDNotFound">Doctor ID Not Found</string>
    <string name="dateOfBirth">Date Of Birth</string>
    <string name="newReports">New Reports</string>
    <string name="drd">Dr. D</string>
    <string name="newRespond">New Respond</string>
    <string name="respond">Respond</string>
    <string name="doctorRespond">Doctor Respond</string>
    <string name="doctorNotRespond">Doctor Not Respond yet</string>
</resources>
