<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/dp5"
    android:background="@drawable/border"
    android:gravity="center"
    android:layout_margin="@dimen/dp5">

    <TextView
        android:id="@+id/tvPID"
        style="@style/Titles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:hint="@string/patientID" />
    <TextView
        android:id="@+id/tvPN"
        style="@style/Titles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:hint="@string/patientName" />

    <TextView
        android:id="@+id/tvPS"
        style="@style/Titles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:hint="@string/patientSex" />

    <TextView
        android:id="@+id/tvDT"
        style="@style/Titles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:hint="@string/diabetesType" />

</LinearLayout>